--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my first website
-        
-    </title>
+    <title>my first website</title>
 </head>
 <body>
-    
+    <div>
+        <h3>my first website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, modi quam vero itaque dolor, quo unde adipisci, perspiciatis labore beatae consequatur. Voluptas fugit quidem asperiores beatae nobis. Laboriosam, neque sapiente.</p>
+    </div>
 </body>
 </html>
