my de and none website

--- a/index.html
+++ b/index.html
@@ -3,12 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/blog.css">
     <title>my first website</title>
 </head>
 <body>
     <div>
         <h3>my first website</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, modi quam vero itaque dolor, quo unde adipisci, perspiciatis labore beatae consequatur. Voluptas fugit quidem asperiores beatae nobis. Laboriosam, neque sapiente.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, modi quam vero itaque dolor, quo unde adipisci, perspiciatis labore beatae consequatur. Voluptas fugit quidem asperiores beatae nobis. Laboriosam, neque sapiente.  </p>
     </div>
+    <div>
+        <h3>my de website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, modi quam vero itaque dolor, quo unde adipisci, perspiciatis labore beatae consequatur. Voluptas fugit quidem asperiores beatae nobis. Laboriosam, neque sapiente.  </p>
+    </div>
+    <div>
+        <h3>my none website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, modi quam vero itaque dolor, quo unde adipisci, perspiciatis labore beatae consequatur. Voluptas fugit quidem asperiores beatae nobis. Laboriosam, neque sapiente.  </p>
+    </div>
+
+
+
+
+
 </body>
 </html>
