--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, modi quam vero itaque dolor, quo unde adipisci, perspiciatis labore beatae consequatur. Voluptas fugit quidem asperiores beatae nobis. Laboriosam, neque sapiente.  </p>
     </div>
 
-
+<div>
+    <h3>three commit name</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit</li>
+        <li>git push</li>
+    </ul>
+</div>
 
 
 
