--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <li>git commit</li>
         <li>git push</li>
     </ul>
+    <h3>hi my name is pl</h3>
+    <img src="images/pl.png" alt="">
 </div>
 
 
